# phase

./: Cargo.toml  README.md  build.rs  index.html  trunk.toml
docs/: index.html  phase-15ff0ce57a81c301.js  phase-5ecad2fec7045fd8.js
gpu_random/: Cargo.toml
gpu_random/src/: lib.rs  philox.rs  widening_mul.rs
kernel/: Cargo.toml
kernel/src/: lib.rs
src/: error.rs  gpu.rs  lib.rs  main.rs  simulation.rs
src/gpu/: physics.rs  pipeline.rs
src/gpu/physics/: ising.rs
src/simulation/: atomic_f32.rs  custom3d.rs  ising.rs  render_square.rs
